2020-08-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.4.2 released.

2020-08-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-sh-get-signal-strings): Add sanity check.

	* tramp-smb.el (tramp-smb-options): Change :version.

2020-08-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-signal-strings): Remove function.

	* tramp-adb.el (process-file-return-signal-string): Declare.
	(tramp-adb-get-signal-strings): New defun.
	(tramp-adb-handle-process-file): Use it.

	* tramp-sh.el (process-file-return-signal-string): Declare.
	(tramp-sh-get-signal-strings): New defun.
	(tramp-sh-handle-process-file): Use it.

2020-07-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-set-remote-path): Send the command in several
	chunks if it is too large.  (Bug#42538)

2020-07-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.4.1 released.

	* tramp.el: Bump version to 2.4.5-pre.

2020-07-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (top): Adapt `tramp-gvfs-unload-hook'.

	* tramp-sh.el (tramp-open-shell): Remove "~/.editrc" editing.
	(tramp-open-connection-setup-interactive-shell): Move up "set +o
	vi +o emacs" command.   (Bug#39399)

2020-06-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.4 released.

	* tramp.el: Bump version.

2020-06-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-do-file-attributes-with-stat): Simplify shell
	command.  Suppress errors (interpret as nil).
	(tramp-sh-handle-make-process): Do not visit with
	`insert-file-contents'.  Delete tmp file only if exists.
	(tramp-send-command-and-read): Suppress `signal-hook-function'
	when reading expression.

2020-05-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.3.5 released.

	* tramp-smb.el (tramp-smb-errors): Add "NT_STATUS_INVALID_PARAMETER".

2020-05-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive.el (tramp-archive-file-name-handler):