@@ -1,3 +1,8 @@
+2020-10-01  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-compat.el (tramp-compat-emacs-compiled-version): New defconst.
+	Raise a warning, when it is not equal to the Emacs version.
+
 2020-08-29  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.4.4.2 released.
